--- a/app/src/main/res/layout/household_visit.xml
+++ b/app/src/main/res/layout/household_visit.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
-        <TextView android:id="@+id/lblHeading" android:text="খানা নিবন্ধন"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHeading" android:text="খানা পরিদর্শন"  android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
         <TextView android:id="@+id/lblTotalHH"
             android:layout_column="0" android:layout_marginBottom="5sp" android:layout_width="wrap_content"
             android:layout_marginTop="5sp"
@@ -14,7 +14,7 @@
 <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">
     <LinearLayout android:layout_marginLeft="10sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
     <LinearLayout android:id="@+id/seclbl01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-        <TextView android:id="@+id/lblHlbl01" android:text="খানা নিবন্ধন /তথ্য" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="20sp" style="@style/rowHeading"/>
+        <!--<TextView android:id="@+id/lblHlbl01" android:text="খানা নিবন্ধন /তথ্য" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="20sp" style="@style/rowHeading"/>-->
     </LinearLayout>
     <View android:id="@+id/linelbl01" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
@@ -90,46 +90,22 @@
     <View android:id="@+id/lineMobileNo2" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
 
-        <View android:id="@+id/lineTotMem" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+        <View android:id="@+id/lineTotMem" android:visibility="gone" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
-        <LinearLayout android:id="@+id/secTotMem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
-            <TextView android:id="@+id/lblTotMem" android:visibility="visible" android:text="৮." android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />
-            <TextView android:id="@+id/VlblTotMem" android:text="মোট সদস্য সংখ্যা" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />
-             <EditText android:id="@+id/txtTotMem" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
+        <LinearLayout android:id="@+id/secTotMem" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+            <TextView android:id="@+id/lblTotMem" android:visibility="gone" android:text="৮." android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />
+            <TextView android:id="@+id/VlblTotMem" android:visibility="gone" android:text="মোট সদস্য সংখ্যা" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />
+             <EditText android:id="@+id/txtTotMem" android:visibility="gone" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout android:id="@+id/secTotRWo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:id="@+id/lblTotRWo" android:text="৯." android:visibility="gone" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />
         <TextView android:id="@+id/VlblTotRWo" android:visibility="gone" android:text="কতজন এমন মহিলা আছে যার বয়স ৫০ বছরের নীচে, যিনি বিবাহিতা অথবা কখনও বিবাহ হয়েছিল?" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />
          <EditText android:id="@+id/txtTotRWo" android:visibility="gone" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
+     </LinearLayout>
 
-        <!--<EditText android:id="@+id/dtpExDate" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />-->
-
-        <!--<EditText android:id="@+id/dtpEnDate" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />-->
-    </LinearLayout>
-
-        <!--<View android:id="@+id/lineHH1" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />-->
-        <!--<LinearLayout android:id="@+id/secVDate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">-->
-            <!--<TextView android:id="@+id/lblVDate" android:text="৮." android:visibility="visible" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<TextView android:id="@+id/VlblVDate" android:text="ইন্টারভিউর তারিখ" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<EditText android:id="@+id/dtpVDate" android:drawableRight="@drawable/calendersmall" android:layout_width="150sp" android:inputType="text" android:layout_height="wrap_content" android:focusable="false" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp"/>-->
-        <!--</LinearLayout>-->
-        <!--<View android:id="@+id/lineVDate" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />-->
-        <!--<LinearLayout android:id="@+id/secVStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">-->
-            <!--<TextView android:id="@+id/lblVStatus" android:text="৯." android:visibility="visible" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<TextView android:id="@+id/VlblVStatus" android:text="সাক্ষাতকারের ফলাফল" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<Spinner android:id="@+id/spnVStatus" android:drawSelectorOnTop="true" android:spinnerMode="dialog" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />-->
-        <!--</LinearLayout>-->
-        <!--<View android:id="@+id/lineVStatus" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />-->
-        <!--<LinearLayout android:id="@+id/secVStatusOth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">-->
-            <!--<TextView android:id="@+id/lblVStatusOth" android:text="১০." android:visibility="visible" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<TextView android:id="@+id/VlblVStatusOth" android:text="অন্যান্য উল্লেখ করুন" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />-->
-            <!--<EditText android:id="@+id/txtVStatusOth" android:maxLength="50" android:layout_width="250sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />-->
-        <!--</LinearLayout>-->
-        <!--<View android:id="@+id/lineVStatusOth" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />-->
-
-        <LinearLayout android:id="@+id/secResp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:visibility="gone" >
-            <TextView android:id="@+id/lblResp" android:text="১১." android:visibility="visible" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp"  />
+        <LinearLayout android:id="@+id/secResp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" >
+            <TextView android:id="@+id/lblResp" android:text="৮." android:visibility="visible" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp"  />
             <TextView android:id="@+id/VlblResp" android:text="উত্তরদাতা" android:layout_width="220sp" android:layout_height="wrap_content" android:textSize="20sp" />
             <Spinner android:id="@+id/spnResp" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
         </LinearLayout>
