--- a/app/src/main/res/layout/householdheading.xml
+++ b/app/src/main/res/layout/householdheading.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow" android:layout_marginTop="5sp" android:layout_marginBottom="5sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"  android:background="#C2E0EC" android:paddingTop="5px" android:paddingBottom="5px">
-        <TextView android:text="Vill" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="Bari" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="HH" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="Religion" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="MobileNo1" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="MobileNo2" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="HHHead" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="TotMem" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="TotRWo" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="EnType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="EnDate" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="ExType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="ExDate" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
-        <TextView android:text="Rnd" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>
+    <LinearLayout android:id="@+id/secListRow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"  android:background="#C2E0EC" android:paddingTop="8px" android:paddingBottom="5px">
+        <TextView android:text="" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="বাড়ি #" android:layout_width="50sp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="বাড়ির নাম" android:layout_width="190sp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="খানা #" android:layout_width="80dp" android:layout_marginLeft="50sp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="খানা প্রধান" android:layout_width="190sp" android:gravity="left" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="মোট সদস্য" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="ফলাফল" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+
     </LinearLayout>
  </LinearLayout>
