--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -125,8 +125,14 @@
     <View android:id="@+id/linelblSpsl" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secSp1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:id="@+id/lblSp1" android:text="১৩." android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp" />
-        <TextView android:id="@+id/VlblSp1" android:text="সিরিয়াল নম্বর ১" android:layout_width="230sp" android:layout_height="wrap_content" android:textSize="20sp" />
-         <!--<EditText android:id="@+id/spnSp1" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />-->
+
+        <TextView
+            android:id="@+id/VlblSp1"
+            android:layout_width="230sp"
+            android:layout_height="wrap_content"
+            android:text="সিরিয়াল নম্বর ১"
+            android:textSize="20sp" />
+        <!--<EditText android:id="@+id/spnSp1" android:maxLength="2" android:layout_width="60sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />-->
         <Spinner android:id="@+id/spnSp1" android:drawSelectorOnTop="true" android:layout_width="250sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
     </LinearLayout>
     <View android:id="@+id/lineSp1" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
@@ -176,6 +182,17 @@
         <TextView android:id="@+id/VlblExDate" android:text="ExDate" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" android:visibility="gone" />
         <EditText android:id="@+id/dtpExDate" android:drawableRight="@drawable/calendersmall" android:layout_width="150sp" android:inputType="text" android:layout_height="wrap_content" android:focusable="false" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" android:visibility="gone" />
     </LinearLayout>
+
+
+        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" android:visibility="gone" />
+        <LinearLayout android:layout_width="fill_parent" android:background="#006699" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+            <TextView android:text="" android:layout_width="60sp" android:layout_height="wrap_content" android:textSize="20sp"  />
+            <TextView android:text="ডেটা আবার পর্যালোচনা করা প্রয়োজন" android:textColor="#FFFFFF" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" />
+            <CheckBox android:id="@+id/chkNeedReview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="" android:background="#FFFFFF" />
+        </LinearLayout>
+
     <View android:id="@+id/lineExDate" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" android:visibility="gone" />
        <LinearLayout android:layout_width="fill_parent" android:paddingTop="20sp" android:layout_height="wrap_content" android:orientation="horizontal">
        	<Button android:id="@+id/cmdSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/button_style"
