--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -15,16 +15,109 @@
         <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
         <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="20sp" android:textSize="20sp" />
 
-        <TextView android:id="@+id/VlblHHHead" android:text="খানা প্রধান" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
-        <TextView android:id="@+id/lblHHHead" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"/>
+        <TextView android:text="Village"
+            android:layout_column="0"
+            android:layout_width="80sp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/lblVillName"
+            android:layout_width="160sp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:gravity="left"
+            android:textSize="20sp" />
 
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
+    <LinearLayout android:background="#F3F3F3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+
+        <TextView android:text="Bari"
+            android:layout_column="0"
+            android:layout_width="100sp"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/lblBariName"
+            android:layout_width="200sp"
+            android:layout_height="match_parent"
+            android:layout_column="1"
+            android:gravity="left"
+            android:textSize="20sp" />
+
+        <TextView android:id="@+id/VlblHHHead" android:text="খানা প্রধান" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/lblHHHead" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"/>
+
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#CCCCCC" />
+
     <LinearLayout android:id="@+id/secMenu" android:layout_weight="3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
-        <Button android:id="@+id/btnMemberName" android:layout_weight="1" android:layout_width="wrap_content"  android:layout_height="40sp" android:layout_marginBottom="10sp" android:layout_marginLeft="0sp" android:layout_marginRight="10sp" android:layout_marginTop="5dip" android:background="@drawable/button_style" android:text="সদস্যের নামের তালিকা তৈরি" android:textSize="18sp" />
-        <Button android:id="@+id/btnSES" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:layout_marginTop="5dip" android:background="@drawable/button_style" android:text="খানার তথ্য" android:textSize="18sp" />
-        <Button android:id="@+id/btnPregHis" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginBottom="10sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp" android:layout_marginTop="5dip" android:background="@drawable/button_style" android:text="গর্ভের ইতিহাস" android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnMemberName"
+            android:layout_width="20sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10sp"
+            android:layout_marginLeft="0sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="5dip"
+            android:layout_weight="1"
+            android:background="@drawable/button_style"
+            android:text="নতুন সদস্য"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnSES"
+            android:layout_width="20sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="5dip"
+            android:layout_weight="1"
+            android:background="@drawable/button_style"
+            android:text="খানার তথ্য"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnPregHis"
+            android:layout_width="30sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="5dip"
+            android:layout_weight="1"
+            android:background="@drawable/button_style"
+            android:text="গর্ভের ইতিহাস"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/cmdEvList"
+            android:layout_width="120sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5sp"
+            android:paddingLeft="10dp"
+            android:text="ঘটনার তালিকা"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/cmdVisitList"
+            android:layout_width="120sp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5sp"
+            android:paddingLeft="10dp"
+            android:text="পরিদর্শন তালিকা"
+            android:textSize="20sp" />
+
         <Button android:id="@+id/btnRefresh" android:visibility="gone" android:layout_weight="1"  android:background="@drawable/button_style_blue" android:textSize="18sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginTop="5dip" android:layout_marginBottom="10sp" android:text=" Refresh " android:paddingLeft="5sp" android:paddingRight="5sp"/>
     </LinearLayout>
 
@@ -91,5 +184,32 @@
             </ScrollView>
         </LinearLayout>
     </HorizontalScrollView>
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+        <RadioGroup
+            android:id="@+id/roMemberOption" android:layout_column="0" android:layout_span="4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/roActiveMember"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Active Members"
+                android:checked="true" />
+
+            <RadioButton
+                android:id="@+id/roAllMember"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All Members" />
+        </RadioGroup>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="2dip"
+        android:background="#00CD00" />
+
 
 </LinearLayout>
