--- a/app/src/main/res/layout/member.xml
+++ b/app/src/main/res/layout/member.xml
@@ -194,7 +194,7 @@
         </LinearLayout>
 
     <View android:id="@+id/lineExDate" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" android:visibility="gone" />
-       <LinearLayout android:layout_width="fill_parent" android:paddingTop="20sp" android:layout_height="wrap_content" android:orientation="horizontal">
+       <LinearLayout android:visibility="gone" android:layout_width="fill_parent" android:paddingTop="20sp" android:layout_height="wrap_content" android:orientation="horizontal">
        	<Button android:id="@+id/cmdSave1" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/button_style" android:textSize="20sp" android:text=" Save -> Continue "  android:layout_marginBottom="10sp"/>
        </LinearLayout>
     </LinearLayout>
